--- a/Pipfile
+++ b/Pipfile
@@ -4,12 +4,12 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-flask = "==1.1.2"
-requests = "==2.25.1"
-flask-cors = "==3.0.10"
 python-dotenv = "*"
+flask = "*"
+requests = "*"
+flask-cors = "*"
+
+[dev-packages]
 
 [requires]
 python_version = "3.13"
-
-[dev-packages]
