--- a/new_apis/Pipfile
+++ b/new_apis/Pipfile
@@ -8,6 +8,7 @@ flask = "==1.1.2"
 requests = "==2.25.1"
 flask-cors = "==3.0.10"
 python-dotenv = "*"
+pymongo = "*"
 
 [requires]
 python_version = "3.13"
